--- a/Tic Tac Toe/css/game.css
+++ b/Tic Tac Toe/css/game.css
@@ -20,7 +20,7 @@ td {
     to the index finger hand when we hover over td elements.*/
     cursor: pointer;
     /*This property sets our table border style. */
-    border: 4px solid rga(252, 169, 3, .8);
+    border: 4px solid rgba(252, 169, 3, .8);
     /*This property removes default padding. */
     padding: 0px;
     width: 200px;
